--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ts_test",
+  "homepage" : "https://innocent1312.github.io/react-typesctipt-todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
